idek what i did here

--- a/404.html
+++ b/404.html
@@ -14,12 +14,15 @@ permalink: /404.html
     <div id="container">
         <div id="header">
             <div id="logo">
-                <img src="fard.png" />
+                <img src="fard.jpg" />
             </div>
             <div id="headercontent">
                 <h1>vizuelfards</h1>
-                <p>the home of all things fard</p>
+                <span>the home of all things fard</span>
             </div>
+        </div>
+        <div id="maincontent">
+            
         </div>
     </div>
 </body>
