page now shows which fard you are looking at

--- a/404.html
+++ b/404.html
@@ -9,6 +9,7 @@ permalink: /404.html
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vizuelfards</title>
     <link href="styles.css" rel="stylesheet" />
+    <script src="fard.js" defer></script>
 </head>
 <body>
     <div id="container">
@@ -22,7 +23,7 @@ permalink: /404.html
             </div>
         </div>
         <div id="maincontent">
-            
+            <h1 id="fardnumber"></h1>
         </div>
     </div>
 </body>
