i forgot to commit :( my bad

--- a/404.html
+++ b/404.html
@@ -24,6 +24,7 @@ permalink: /404.html
         </div>
         <div id="maincontent">
             <h1 id="fardnumber"></h1>
+            <img id="fard" />
         </div>
     </div>
 </body>
