--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@ permalink: /404.html
     <div id="container">
         <div id="header">
             <div id="logo">
-                <img src="fard.jpg" />
+                <img src="fard.jpg"  alt="some dude with exploding head above the word FARD"/>
             </div>
             <div id="headercontent">
                 <h1>vizuelfards</h1>
